<resources>
    <string name="app_name">MapMates</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_people">People</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibW9oaXQtang2NCIsImEiOiJjbGdjanVkdHgyMXd0M2dwOHhpdTRiZGZhIn0.O3INLL2ECVFnb4B3Pifc6w</string>
</resources>