<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_selector"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore_selector"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_create"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/people_selector"
        android:title="@string/title_people" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />

</menu>